Fixes Collumn spacing, adds sources for press coverage

--- a/style1.css
+++ b/style1.css
@@ -49,7 +49,10 @@ iframe.map {
     float: left;
     width: 16.6666666667%;
   }
-  
+.row {
+    display: flex;
+    justify-content: center;
+}
   /* Clear floats after the columns */
   .row:after {
     content: "";
